Some styling issues fixed. Now looks reasonable on mobile

--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -1,3 +1,3 @@
 div#wrapper {
- width: 1080px;
+ width: 760px;
 }
