--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,7 @@ div.menu {
 
 div.menu_item {
  float: left;
+ font-size: 1em;
  margin: 0px;
  padding-left: 10px;
  padding-right: 10px;
@@ -65,7 +66,7 @@ div.task table {
 
 div.task td {
  color: #7f7f7f;
- font-size: 22px;
+ font-size: 1em;
 }
 
 div.finished span, div.finished td {
@@ -122,13 +123,6 @@ hr {
  height: 1px;
 }
 
-img.clock {
- float: right;
- height: 30px;
- width: 30px;
- vertical-align: top;
-}
-
 img.delete {
  height: 16px;
  width: 16px;
@@ -138,11 +132,10 @@ img.delete {
 
 input {
  border: 1px solid #000000;
- display: block;
- height: 28px;
- margin: 1px;
+ height: 1.4em;
+ margin: 0px;
  font-family: Futura, Impact, Helvetica, Arial, sans-serif;
- font-size: 22px;
+ font-size: 1em;
  padding: 0px;
 }
 
@@ -151,24 +144,28 @@ input#name_field {
 }
 
 input#estimate_field {
- width: 375px;
+ width: 275px;
 }
 
 #submit {
- height: 32px;
- width: 100px;
+ border: 1px solid #000000;
+ height: 1.4em;
+ margin: 1px;
+ font-family: Futura, Impact, Helvetica, Arial, sans-serif;
+ font-size: 1em;
  padding: 0px;
+ width: 100px;
 }
 
 span.duration, span.estimate {
  color: #7f7f7f;
- font-size: 24px;
+ font-size: 1em;
  font-weight: bold;
  padding: 2px;
 }
 
 span.name {
  color: #000000;
- font-size: 30px;
+ font-size: 1.2em;
  font-weight: bold;
 }
