--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -1,3 +1,3 @@
 div#wrapper {
- width: 90%;
+ width: 95%;
 }
